--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         </select>
         <select class="country_drop_down" id="relative_currency">
         </select>
+        <label for="date_selector">Date</label>
+        <input type="date" value="2020-06-31" id="date_selector">
         <footer>
             
         </footer>
