--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="A simple website for converting currencies">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
+        <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link rel="shortcut icon" href="#" />
         <script src="scripts/script.js" defer></script>
     </head>
@@ -14,15 +15,26 @@
 
         </header>
         <div id="value_box"></div>
-        <form>
-            <input type="number" step="0.01" value="1.00" id="value_input">
+        <form class="grid_form">
+            <div class="labeled_input1">
+                <label for="value_input">Amount:</label>
+                <input type="number" value="1" id="value_input">
+            </div>
+            <div class="labeled_input2">
+                <label for="base_currency">From:</label>
+                <select class="country_drop_down" id="base_currency">
+                </select>
+            </div>
+            <div class="labeled_input3">
+                <label for="relative_currency">To:</label>
+                <select class="country_drop_down" id="relative_currency">
+                </select>
+            </div>
+            <div class="labeled_input4">
+                <label for="date_selector">Date:</label>
+                <input type="date" value="2020-06-31" id="date_selector">
+            </div>
         </form>
-        <select class="country_drop_down" id="base_currency">
-        </select>
-        <select class="country_drop_down" id="relative_currency">
-        </select>
-        <label for="date_selector">Date</label>
-        <input type="date" value="2020-06-31" id="date_selector">
         <footer>
             
         </footer>
