Lists full currency names and adds a button to swap currencies

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-08">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="A simple website for converting currencies">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" type="text/css" href="styles/normalize.css">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link rel="shortcut icon" href="#" />
@@ -31,6 +32,7 @@
                     <select class="country_drop_down" id="base_currency">
                     </select>
                 </div>
+                <button type="button" class="swap_button material-icons" onclick="swapCurrencies()">swap_horiz</button>
                 <div class="labeled_input">
                     <label for="relative_currency">To:</label>
                     <select class="country_drop_down" id="relative_currency">
