removes some unnecessary css styling and adds some documentation

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
         <script src="scripts/script.js" defer></script>
     </head>
     <body>
-        <header>
-        </header>
         <form>
             <h1>Currency Converter</h1>
             <section class="input_section values">
@@ -41,11 +39,8 @@
             </section>
             <div class="labeled_input date_input">
                 <label for="date_selector">Date:</label>
-                <input type="date" value="2020-06-31" id="date_selector">
+                <input type="date" placeholder="yyyy-mm-dd" id="date_selector">
             </div>
         </form>
-        <footer>
-            
-        </footer>
     </body>
 </html>
