--- a/index.html
+++ b/index.html
@@ -12,32 +12,28 @@
         <script src="scripts/script.js" defer></script>
     </head>
     <body>
+        <h1 id="site_header">Currency Converter</h1>
         <form>
-            <h1>Currency Converter</h1>
-            <section class="input_section values">
-                <div class="labeled_input">
-                    <label for="value_input">Amount:</label>
-                    <input type="number" value="1.00" id="value_input">
-                </div>
-                <div class="labeled_input"> 
-                    <label for="value_box">Value:</label>
-                    <input id="value_box" readonly></input>
-                </div>
-            </section>
-            <section class="input_section">
-                <div class="labeled_input">
-                    <label for="base_currency">From:</label>
-                    <select class="country_drop_down" id="base_currency">
-                    </select>
-                </div>
-                <button type="button" class="swap_button material-icons" onclick="swapCurrencies()">swap_horiz</button>
-                <div class="labeled_input">
-                    <label for="relative_currency">To:</label>
-                    <select class="country_drop_down" id="relative_currency">
-                    </select>
-                </div> 
-            </section>
-            <div class="labeled_input date_input">
+            <div class="labeled_input" id="base_value">
+                <label for="value_input">Amount:</label>
+                <input type="number" value="1.00" id="value_input">
+            </div>
+            <div class="labeled_input" id="converted_value"> 
+                <label for="value_box">Converted Value:</label>
+                <input id="value_box" readonly></input>
+            </div>
+            <div class="labeled_input" id="base_currency">
+                <label for="base_currency">From:</label>
+                <select class="country_drop_down">
+                </select>
+            </div>
+            <button type="button" class="swap_button material-icons" onclick="swapCurrencies()">swap_horiz</button>
+            <div class="labeled_input" id="to_currency">
+                <label for="relative_currency">To:</label>
+                <select class="country_drop_down">
+                </select>
+            </div>
+            <div class="labeled_input date_input" id="date">
                 <label for="date_selector">Date:</label>
                 <input type="date" placeholder="yyyy-mm-dd" id="date_selector">
             </div>
