fixes select overflow grid

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
         <link rel="shortcut icon" href="#" />
         <script src="scripts/script.js" defer></script>
     </head>
-    <body>
-        <h1 id="site_header">Currency Converter</h1>
-        <form>
+    <body class="site">
+        <div id="title">
+            <h1>Currency Converter</h1>
+        </div>
+        <form class="conversion_section">
             <div class="labeled_input" id="base_value">
                 <label for="value_input">Amount:</label>
                 <input type="number" value="1.00" id="value_input">
